# Memo-client-gui

./: .gitignore  .gitmodules  CMakeLists.txt
src/: MainWindow.cpp  MainWindow.hpp  MainWindow.ui  main.cpp
src/dialog/: BaseMemoDialog.cpp  BaseMemoDialog.hpp  EditMemoDialog.cpp  EditMemoDialog.hpp  ManageTagsDialog.cpp  ManageTagsDialog.hpp  NewMemoDialog.cpp  NewMemoDialog.hpp  managetagsdialog.ui
src/manager/: MemoCollection.cpp  MemoCollection.hpp  MemoVault.cpp  MemoVault.hpp  TagCollection.cpp  TagCollection.hpp  TagVault.cpp  TagVault.hpp
src/model/: Color.hpp  Memo.cpp  Memo.hpp  Tag.cpp  Tag.hpp  conversions.cpp  conversions.hpp
src/remote/: ClientAdapterUtils.cpp  ClientAdapterUtils.hpp  GrpcClient.cpp  GrpcClient.hpp  GrpcClientAdapter.cpp  GrpcClientAdapter.hpp  GrpcResponse.hpp  IGrpcClient.hpp  IGrpcClientAdapter.hpp
src/remote/concurrency/: BaseWorker.hpp  CreationWorker.cpp  CreationWorker.hpp  QueryWorker.cpp  QueryWorker.hpp  RemovalWorker.cpp  RemovalWorker.hpp  UpdateWorker.cpp  UpdateWorker.hpp  Worker.hpp
src/remote/concurrency/visitor/: WorkerVisitor.hpp
src/remote/model/: AddMemo.cpp  AddMemo.hpp  AddTag.cpp  AddTag.hpp  ListMemos.cpp  ListMemos.hpp  ListTags.cpp  ListTags.hpp  ModelView.hpp  OperationStatus.hpp  RemoveMemo.cpp  RemoveMemo.hpp  RemoveTag.cpp  RemoveTag.hpp  UpdateMemo.cpp  UpdateMemo.hpp  UpdateTag.cpp  UpdateTag.hpp
src/tools/: uuid.cpp  uuid.hpp
src/widget/: EditMemoWidget.cpp  EditMemoWidget.hpp  editmemowidget.ui
